# claude-forge

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SETUP.md  SMART_TOOLS_DETECTION.md  TEMPLATE_OPTIMIZATION.md  TEMPLATE_STRATEGY.md
.github/workflows/: ci.yml  release.yml
src/: main.rs
src/cli/: add.rs  config.rs  init.rs  mcp.rs  mod.rs  tools.rs  update.rs  upgrade.rs
src/core/: detector.rs  generator.rs  mod.rs  tools_detector.rs  validator.rs
src/templates/: registry.rs
src/tools/: checker.rs  installer.rs  mod.rs
src/utils/: fs.rs
templates/core/: CLAUDE.md.template
templates/core/agents/: code-reviewer.md  documentation-agent.md  performance-optimizer.md  security-scanner.md
templates/core/commands/analyze/: complexity.md  deps.md  duplicates.md
templates/core/commands/docs/: api-docs.md  readme.md
templates/core/commands/refactor/: extract-function.md
templates/core/hooks/: inject-context.sh  security-check.sh  session-init.sh
templates/languages/elixir/: CLAUDE.md
templates/languages/erlang/: CLAUDE.md
templates/languages/go/: CLAUDE.md
templates/languages/java/: CLAUDE.md
templates/languages/javascript/: CLAUDE.md
templates/languages/javascript/hooks/: eslint-check.sh  prettier-format.sh
templates/languages/python/: CLAUDE.md
templates/languages/rust/: CLAUDE.md
templates/languages/typescript/: CLAUDE.md  CLAUDE.md.template  config.json
templates/languages/typescript/agents/: ts-type-checker.md
templates/languages/typescript/hooks/: eslint-check.sh  prettier-format.sh
(+7 files in other folders)
